tests/gabc-dump/should-fail/unclosed-under-ledger.gabc
name: unclosed under-staff ledger line;
%%
(c4) g(g) h(h[ull:2mm{2mm])
